--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ body .wraper .examples .background_images img:nth-child(1) {
   top: 17.37%;
 }
 body .wraper .examples .background_images img:nth-child(2) {
-  left: 85.42%;
+  left: 88.42%;
   top: 78.07%;
 }
 body .wraper .examples .container {
@@ -507,4 +507,145 @@ body .wraper .examples .container .examples_item .examples_image-block .examples
 }
 body .wraper .examples .container .examples_item .examples_image-block .active {
   display: flex;
+}
+body .wraper .information {
+  display: flex;
+  justify-content: center;
+  max-width: 1920px;
+  background-color: #FFFFFF;
+  position: relative;
+}
+body .wraper .information .background_images img {
+  position: absolute;
+}
+body .wraper .information .background_images img:nth-child(1) {
+  left: 7.94%;
+  top: 30.37%;
+}
+body .wraper .information .background_images img:nth-child(2) {
+  left: 57.42%;
+  top: 24.07%;
+}
+body .wraper .information .container {
+  width: 1170px;
+}
+body .wraper .information .container .title {
+  margin-top: 214px;
+  margin-bottom: 53px;
+}
+body .wraper .information .container .title h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 40px;
+  color: #111111;
+}
+body .wraper .information .container .description {
+  margin-bottom: 45px;
+  width: 669.65px;
+}
+body .wraper .information .container .description p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25.2px;
+  color: #111111;
+}
+body .wraper .information .container .button {
+  margin-bottom: 180px;
+}
+body .wraper .information .container .button button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #75E169;
+  padding: 22.5px 55.97px;
+  border-radius: 5px;
+}
+body .wraper .feedback {
+  display: flex;
+  justify-content: center;
+  max-width: 1920px;
+  background-color: #DAECFF;
+  position: relative;
+}
+body .wraper .feedback .background_images img {
+  position: absolute;
+}
+body .wraper .feedback .background_images img:nth-child(1) {
+  left: 7.94%;
+  top: 31.37%;
+}
+body .wraper .feedback .background_images img:nth-child(2) {
+  left: 74.42%;
+  top: 38.07%;
+}
+body .wraper .feedback .container {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+}
+body .wraper .feedback .container .title {
+  margin-top: 180px;
+  margin-bottom: 20px;
+}
+body .wraper .feedback .container .title h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 40px;
+  color: #111111;
+}
+body .wraper .feedback .container .description {
+  max-width: 479px;
+  margin-bottom: 27px;
+}
+body .wraper .feedback .container .description p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 31.5px;
+  color: #111111;
+}
+body .wraper .feedback .container .feedback_form {
+  width: 470px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 128px;
+  align-items: center;
+}
+body .wraper .feedback .container .feedback_form .input_field {
+  width: 470px;
+  height: 58px;
+  background: #FFFFFF;
+  border: 1px solid #6EB1FB;
+  border-radius: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #939393;
+  padding: 14px 19px;
+}
+body .wraper .feedback .container .feedback_form .submit {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  width: 270px;
+  height: 60px;
+  background: #6BD75F;
+  border-radius: 5px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #F9F9F9;
 }
