--- a/style.css
+++ b/style.css
@@ -533,6 +533,8 @@ body .wraper .information .background_images img:nth-child(1) {
 body .wraper .information .background_images img:nth-child(2) {
   left: 57.42%;
   top: 24.07%;
+  width: 411.58px;
+  height: 381.5px;
 }
 body .wraper .information .container {
   width: 1170px;
@@ -711,4 +713,226 @@ body .wraper .footer .container .information h3 {
   font-weight: 400;
   font-size: 18px;
   line-height: 31.5px;
+}
+
+@media screen and (max-width: 1560px) {
+  body .wraper {
+    max-width: 1560px;
+  }
+  body .wraper .order_header {
+    max-width: 1560px;
+  }
+  body .wraper .order_header .background_images img {
+    position: absolute;
+  }
+  body .wraper .order_header .background_images img:nth-child(2) {
+    top: 78.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(3) {
+    top: 88.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(5) {
+    right: 0%;
+    top: 20.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(7) {
+    left: 40.77%;
+  }
+  body .wraper .order_header .container {
+    width: 1024px;
+  }
+  body .wraper .services {
+    max-width: 1560px;
+  }
+  body .wraper .services .background_images img {
+    top: 85.4%;
+  }
+  body .wraper .services .container {
+    width: 1024px;
+  }
+  body .wraper .services .container .services_description .services_item {
+    max-width: 1024px;
+  }
+  body .wraper .services .stages {
+    max-width: 1560px;
+  }
+  body .wraper .services .stages .container {
+    width: 1024px;
+  }
+  body .wraper .services .examples {
+    max-width: 1560px;
+  }
+  body .wraper .services .examples .container {
+    width: 1024px;
+  }
+  body .wraper .services .information {
+    max-width: 1560px;
+  }
+  body .wraper .services .information .container {
+    width: 1024px;
+  }
+  body .wraper .services .feedback {
+    max-width: 1560px;
+  }
+  body .wraper .services .feedback .container {
+    width: 1024px;
+  }
+  body .wraper .services .footer {
+    max-width: 1920px;
+  }
+  body .wraper .services .footer .container {
+    width: 1024px;
+  }
+  body .wraper .information .background_images img:nth-child(1) {
+    top: 15.37%;
+  }
+  body .wraper .feedback .background_images img:nth-child(1) {
+    left: 3.94%;
+  }
+}
+@media screen and (max-width: 1220px) {
+  body .wraper {
+    max-width: 1220px;
+  }
+  body .wraper .nav .container {
+    width: 960px;
+  }
+  body .wraper .order_header {
+    max-width: 1220px;
+  }
+  body .wraper .order_header .background_images img {
+    position: absolute;
+  }
+  body .wraper .order_header .background_images img:nth-child(2) {
+    width: 80px;
+    left: 0%;
+    top: 78.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(3) {
+    width: 100px;
+    top: 83%;
+    left: 3.5%;
+  }
+  body .wraper .order_header .background_images img:nth-child(5) {
+    width: 400px;
+    top: 15.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(6) {
+    width: 100px;
+    top: 54.45%;
+  }
+  body .wraper .order_header .background_images img:nth-child(7) {
+    width: 400px;
+    left: 54.77%;
+    top: 18.46%;
+  }
+  body .wraper .order_header .background_images img:nth-child(8) {
+    width: 100px;
+    left: 87.17%;
+    top: 22.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(9) {
+    width: 40px;
+    left: 88.17%;
+    top: 39.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(10) {
+    width: 30px;
+    left: 93.17%;
+    top: 34.42%;
+  }
+  body .wraper .order_header .background_images img:nth-child(11) {
+    left: 81.4%;
+    top: 60.86%;
+  }
+  body .wraper .order_header .container {
+    width: 960px;
+  }
+  body .wraper .services {
+    max-width: 1220px;
+  }
+  body .wraper .services .background_images img {
+    width: 80px;
+    left: 89.52%;
+    top: 4.4%;
+  }
+  body .wraper .services .container {
+    max-width: 960px;
+  }
+  body .wraper .services .container .services_description .services_item {
+    max-width: 960px;
+  }
+  body .wraper .stages {
+    max-width: 1220px;
+  }
+  body .wraper .stages .container {
+    width: 960px;
+  }
+  body .wraper .examples {
+    max-width: 1220px;
+  }
+  body .wraper .examples .background_images img {
+    position: absolute;
+  }
+  body .wraper .examples .background_images img:nth-child(1) {
+    display: none;
+  }
+  body .wraper .examples .background_images img:nth-child(2) {
+    display: none;
+  }
+  body .wraper .examples .container {
+    width: 960px;
+  }
+  body .wraper .examples .container .examples_item {
+    display: flex;
+    justify-content: center;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block {
+    width: 960px;
+    height: 587px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block .examples_image {
+    width: 960px;
+    height: 587px;
+  }
+  body .wraper .examples .container .examples_item .examples_image-block .examples_description {
+    width: 960px;
+    height: 587px;
+  }
+  body .wraper .information {
+    max-width: 1220px;
+  }
+  body .wraper .information .background_images img {
+    position: absolute;
+  }
+  body .wraper .information .background_images img:nth-child(1) {
+    left: 4.94%;
+    top: 10.37%;
+  }
+  body .wraper .information .background_images img:nth-child(2) {
+    left: 67.42%;
+    top: 24.07%;
+    width: 351.58px;
+    height: 301.5px;
+  }
+  body .wraper .information .container {
+    width: 960px;
+  }
+  body .wraper .feedback {
+    max-width: 1220px;
+  }
+  body .wraper .footer {
+    max-width: 1220px;
+  }
+  body .wraper .footer .container {
+    width: 960px;
+  }
+}
+@media screen and (max-width: 960px) {
+  body .wraper {
+    max-width: 960px;
+  }
+  body .wraper .nav .container {
+    width: 640px;
+  }
 }
