--- a/style.scss
+++ b/style.scss
@@ -53,6 +53,20 @@ body {
                     width: 100%;
                     padding: 18px 0px;
 
+                    .burger_menu {
+                        display: none;
+
+                        img {
+                            width: 17px;
+                        }
+                    }
+
+
+
+                    .active {
+                        display: block;
+                    }
+
                     .nav_logo {
                         img {
                             max-width: 242px;
@@ -1165,6 +1179,287 @@ body {
             .nav {
                 .container {
                     width: 640px;
+
+                    .nav_main {
+                        flex-wrap: wrap;
+
+                        .burger_menu {
+                            display: block;
+                        }
+
+                        .nav_links {
+                            display: none;
+                            flex-wrap: wrap;
+
+
+
+                            .link {
+                                display: flex;
+                                justify-content: center;
+                                width: 100%;
+                                font-weight: $fontWeight800;
+                                font-size: 17px;
+                                line-height: 27px;
+                                text-transform: uppercase;
+                                color: #FFFFFF;
+
+
+                                .nav_button {}
+                            }
+                        }
+
+                        .active {
+                            display: flex;
+                        }
+                    }
+                }
+            }
+
+            .order_header {
+                max-width: 960px;
+
+                .background_images {
+                    img {
+
+                        &:nth-child(1) {
+                            left: 12.45%;
+                            top: 8.48%;
+                        }
+
+                        &:nth-child(2) {
+                            width: 150px;
+                            left: 0%;
+                            top: 25.46%;
+                        }
+
+                        &:nth-child(3) {
+                            top: 33%;
+                            left: 10.5%;
+                        }
+
+                        &:nth-child(4) {
+                            width: 80px;
+                            left: 44.11%;
+                            top: 9.02%;
+                        }
+
+                        &:nth-child(5) {
+                            right: 0%;
+                            top: 3.46%;
+                        }
+
+                        &:nth-child(6) {
+                            left: 39.68%;
+                            top: 35.45%;
+                        }
+
+                        &:nth-child(7) {
+                            left: 38.77%;
+                            top: 9.46%;
+                        }
+
+                        &:nth-child(8) {
+                            left: 77.17%;
+                            top: 10.42%;
+                        }
+
+                        &:nth-child(9) {
+                            left: 81.17%;
+                            top: 23.42%;
+                        }
+
+                        &:nth-child(10) {
+                            left: 86.17%;
+                            top: 19.42%;
+                        }
+
+                        &:nth-child(11) {
+                            width: 100px;
+                            left: 78.4%;
+                            top: 36.86%;
+                        }
+                    }
+                }
+
+                .container {
+                    width: 640px;
+
+                    .order_header-item {
+                        margin-top: 521px;
+
+                        .order_header-button {
+                            margin-bottom: 140px;
+                        }
+                    }
+                }
+            }
+
+            .services {
+                max-width: 960px;
+
+                .background_images {
+                    img {
+                        width: 80px;
+                        left: 80.52%;
+                        top: 4.4%;
+                    }
+                }
+
+                .container {
+                    max-width: 640px;
+
+                    .services_description {
+                        .services_item {
+                            max-width: 640px;
+                        }
+                    }
+                }
+            }
+
+            .stages {
+                max-width: 960px;
+
+                .background_images {
+                    img {
+
+                        &:nth-child(1) {
+                            left: 13.94%;
+                            top: 3.37%;
+                        }
+
+                        &:nth-child(2) {
+                            left: 65.42%;
+                            top: 80.07%;
+                        }
+                    }
+
+                }
+
+                .container {
+                    width: 640px;
+                }
+            }
+
+            .examples {
+                max-width: 960px;
+
+                .container {
+                    width: 640px;
+
+                    .examples_item {
+                        display: flex;
+                        justify-content: center;
+
+                        .examples_image-block {
+                            width: 640px;
+                            height: 487px;
+
+                            .examples_image {
+                                width: 640px;
+                                height: 487px;
+                            }
+
+                            .examples_description {
+                                width: 640px;
+                                height: 487px;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .information {
+                max-width: 960px;
+
+                .background_images {
+                    img {
+
+                        &:nth-child(1) {
+                            left: 14.94%;
+                            top: 10.37%;
+                        }
+
+                        &:nth-child(2) {
+                            left: 50.42%;
+                            top: 56.07%;
+                            width: 351.58px;
+                            height: 301.5px;
+                        }
+                    }
+                }
+
+                .container {
+                    width: 640px;
+
+                    .title {
+                        margin-top: 150px;
+                    }
+                }
+            }
+
+            .feedback {
+                max-width: 960px;
+
+                .background_images {
+                    img {
+
+                        &:nth-child(1) {
+                            width: 250px;
+                            left: 7.94%;
+                            top: 2.37%;
+                            transform: rotate(45deg);
+                        }
+
+                        &:nth-child(2) {
+                            left: 68.42%;
+                            top: 78.07%;
+                        }
+                    }
+                }
+            }
+
+            .footer {
+                max-width: 960px;
+
+                .container {
+                    width: 640px;
+
+                    .contacts {
+                        margin-top: 80px;
+                        margin-bottom: 90px;
+                        display: flex;
+                        gap: 60px;
+                        display: flex;
+                        flex-direction: column;
+
+
+                        .social_network {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                        }
+
+                        .phones {
+                            align-items: center;
+                        }
+
+                        .email {
+                            text-align: center;
+                        }
+                    }
+
+                    .information {
+                        background-color: $colorFooterBlue;
+                        margin-bottom: 79px;
+
+                        h3 {
+                            color: $colorWhite;
+                            font-family: $fontFamilyMontserrat;
+                            font-weight: $fontWeight400;
+                            font-size: 18px;
+                            line-height: 31.5px;
+                        }
+                    }
                 }
             }
         }
